# cpp-evrprogpow

./: CMakeLists.txt  README.md  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml
.github/workflows/: build_wheels_yml
bindings/python/ethash/: __init__.py  _build.py
bindings/python/evrhash/: _build.py
bindings/python/tests/: test_ethash.py
include/ethash/: ethash.h  progpow.hpp
lib/ethash/: ethash.cpp  progpow.cpp
test/: CMakeLists.txt
test/daemon/: CMakeLists.txt  kawpow.cpp
test/lightverify/: CMakeLists.txt  lightverify.cpp
test/unittests/: progpow_test_vectors.hpp  test_cases.hpp  test_ethash.cpp  test_progpow.cpp
